# Mili

./: .bash_history  .bashrc  .gitignore  .wget-hsts  README.md  claves.txt  drone-relay.sh
DashBoard/: .env  .env.example  .env.template  .gitignore  README.md  conection_baga.py  config.yaml  gps_api_client.py  pyproject.toml  ql -h 127.0.0.1 -U pedro -d vigilancia -c SELECT id, nombre, url_stream, url_rtsp FROM camaras;  ruta.json  telemetria_dji.py  vehicle_registry.json  vigilancia_db.sql  web_app.py
DashBoard/controllers/api_protect_stream/: protect_stream.py
DashBoard/controllers/cropts_embeding/: crops_reading.py
DashBoard/controllers/register_cameras/: register_camera.py
DashBoard/controllers/worker/: writer.py
DashBoard/db/: bootstrap.py  config.py  connection.py
DashBoard/repositories/: querys_camera.py  querys_organitation.py  querys_user.py  querys_vehicle.py
DashBoard/static/: perfil.css  web_app.css  web_app.js
DashBoard/surveillance/: __init__.py  app_context.py  arcom.py  config.py  json_utils.py  jwt_utils.py  security.py  settings.py  vehicle_registry.py  web_runtime.py
DashBoard/templates/: camaras.html  mapa.html  registro_vehiculos.html
DashBoard/tests/: test_api_telemetry_bridge.py  test_app_context.py  test_audio_service.py  test_camera_repository_rtsp.py  test_camera_rtsp_generator.py  test_config_camera_registration.py  test_db_connection.py  test_device_catalog.py  test_gps_api_client.py  test_json_utils.py  test_peer_registry.py  test_prueba_cen.py  test_vehicle_registry_api.py  test_web_app_rendering.py  test_web_runtime.py
(+98 files in other folders)
